--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,12 +16,16 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="0.00"
-            android:textSize="30sp"/>
+            android:textSize="30sp"
+            android:padding="5dp"
+            android:gravity="end|center_vertical" />
         <TextView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:text="0.00"
-            android:textSize="20sp"/>
+            android:textSize="20sp"
+            android:padding="5dp"
+            android:gravity="end|center_vertical" />
     </LinearLayout>
     <LinearLayout
         android:layout_width="match_parent"
